--- a/app/globals.css
+++ b/app/globals.css
@@ -14,8 +14,8 @@ body {
 }
 
 .container {
-  margin: 30px auto;
-  width: 350px;
+  margin: 0;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,8 +23,9 @@ body {
 }
 
 .navbar {
-  background: #000;
+  background: #3f3f3f;
   color: #fff;
+  margin-bottom: 60px;
 }
 
 .navbar a {
@@ -49,7 +50,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 900px;
+  /* max-width: 900px; */
+  width: 100vw;
   margin: 0 auto;
   padding: 0 2rem;
 }
